Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35778

Server crashes in Item_func_vec_distance::fix_length_and_dec upon using VEC_DISTANCE with temptable view

    XMLWordPrintable

Details

    Description

      CREATE TABLE t (x VECTOR(1) NOT NULL, VECTOR(x));
      INSERT INTO t VALUES (0x31313131),(0x32323232);
      CREATE ALGORITHM=TEMPTABLE VIEW v AS SELECT * FROM t;
      SELECT * FROM v ORDER BY VEC_DISTANCE(0x30303030, x);
      DROP VIEW v;
      DROP TABLE t;
      

      bb-11.8-MDEV-35450-vec_distance 689a06e4b0925e0c5bb734de63f28c19a9937915

      #3  <signal handler called>
      #4  Item_func_vec_distance::fix_length_and_dec (this=0x7ff9540196e8, thd=0x7ff954000dc8) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/item_vectorfunc.cc:67
      #5  0x000055768f3bafdb in Item_func::fix_fields (this=0x7ff9540196e8, thd=0x7ff954000dc8, ref=0x7ff9540197d0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/item_func.cc:366
      #6  0x000055768edaf6c8 in Item::fix_fields_if_needed (this=0x7ff9540196e8, thd=0x7ff954000dc8, ref=0x7ff9540197d0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/item.h:1168
      #7  0x000055768edaf6fd in Item::fix_fields_if_needed_for_scalar (this=0x7ff9540196e8, thd=0x7ff954000dc8, ref=0x7ff9540197d0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/item.h:1177
      #8  0x000055768efb6fd3 in Item::fix_fields_if_needed_for_order_by (this=0x7ff9540196e8, thd=0x7ff954000dc8, ref=0x7ff9540197d0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/item.h:1185
      #9  0x000055768efa3c29 in find_order_in_list (thd=0x7ff954000dc8, ref_pointer_array=..., tables=0x7ff954018530, order=0x7ff9540197c0, fields=..., all_fields=..., is_group_field=false, add_to_all_fields=true, from_window_spec=false) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:28380
      #10 0x000055768efa3dfb in setup_order (thd=0x7ff954000dc8, ref_pointer_array=..., tables=0x7ff954018530, fields=..., all_fields=..., order=0x7ff9540197c0, from_window_spec=false) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:28427
      #11 0x000055768ef51e7f in setup_without_group (thd=0x7ff954000dc8, ref_pointer_array=..., tables=0x7ff954018530, leaves=..., fields=..., all_fields=..., conds=0x7ff954067d40, order=0x7ff9540197c0, group=0x0, win_specs=..., win_funcs=..., hidden_group_fields=0x7ff954067c07) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:964
      #12 0x000055768ef55292 in JOIN::prepare (this=0x7ff9540678b0, tables_init=0x7ff954018530, conds_init=0x0, og_num=1, order_init=0x7ff9540197c0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7ff954017ef8, unit_arg=0x7ff9540052f0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:1577
      #13 0x000055768ef6320f in mysql_select (thd=0x7ff954000dc8, tables=0x7ff954018530, fields=..., conds=0x0, og_num=1, order=0x7ff9540197c0, group=0x0, having=0x0, proc_param=0x0, select_options=2164525824, result=0x7ff954067888, unit=0x7ff9540052f0, select_lex=0x7ff954017ef8) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:5328
      #14 0x000055768ef512a0 in handle_select (thd=0x7ff954000dc8, lex=0x7ff954005210, result=0x7ff954067888, setup_tables_done_option=0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_select.cc:633
      #15 0x000055768eef3637 in execute_sqlcom_select (thd=0x7ff954000dc8, all_tables=0x7ff954018530) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_parse.cc:6177
      #16 0x000055768eeeb1fd in mysql_execute_command (thd=0x7ff954000dc8, is_called_from_prepared_stmt=false) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_parse.cc:3966
      #17 0x000055768eef8694 in mysql_parse (thd=0x7ff954000dc8, rawbuf=0x7ff954017e30 "SELECT * FROM v ORDER BY VEC_DISTANCE(0x30303030, x)", length=52, parser_state=0x7ff9666272e0) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_parse.cc:7901
      #18 0x000055768eee499f in dispatch_command (command=COM_QUERY, thd=0x7ff954000dc8, packet=0x7ff95400be89 "SELECT * FROM v ORDER BY VEC_DISTANCE(0x30303030, x)", packet_length=52, blocking=true) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_parse.cc:1903
      #19 0x000055768eee32f8 in do_command (thd=0x7ff954000dc8, blocking=true) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_parse.cc:1416
      #20 0x000055768f0ef361 in do_handle_one_connection (connect=0x557693e33028, put_in_cache=true) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_connect.cc:1415
      #21 0x000055768f0ef0e2 in handle_one_connection (arg=0x557693e32f48) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/sql/sql_connect.cc:1327
      #22 0x000055768f6726b0 in pfs_spawn_thread (arg=0x557693e6edd8) at /data/bld/preview-11.8-bb-11.8-MDEV-35450-vec_distance-debug/storage/perfschema/pfs.cc:2198
      #23 0x00007ff96d2a8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #24 0x00007ff96d32861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: